fabric/testdata/out/ing_brexit-indexer-test-ralmeida-statsd-exporter-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"brexit","component":"statsd-exporter","controller-uid":"e65e9dae-5af0-4908-9ed2-e1e9698f683c","deployment-id":"d-2m6ee1ndgmhqgib9faxnp33hfh","environment":"review","pipeline-id":"l-kham1wbmzaojugzy8cubi4fib","version":"pr-42-1"},"name":"brexit-indexer-test-ralmeida-statsd-exporter-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-indexer-test-ralmeida-statsd-exporter.smart-product-platfo [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-06-22T16:03:21Z"
  generation: 1
  labels:
    application: brexit
    component: statsd-exporter
    controller-uid: e65e9dae-5af0-4908-9ed2-e1e9698f683c
    deployment-id: d-2m6ee1ndgmhqgib9faxnp33hfh
    environment: review
    pipeline-id: l-kham1wbmzaojugzy8cubi4fib
    version: pr-42-1
  name: brexit-indexer-test-ralmeida-statsd-exporter-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-indexer-test-ralmeida-statsd-exporter
    uid: e65e9dae-5af0-4908-9ed2-e1e9698f683c
  resourceVersion: "1357488303"
  uid: 78645e0d-d5a2-4154-b10c-e1ffd929c71d
spec:
  rules:
  - host: brexit-indexer-test-ralmeida-statsd-exporter.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-indexer-test-ralmeida-statsd-exporter
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
